# ALPSS

./: .gitignore  ALPSS_env.yml  CITATION.cff  LICENSE.md  README.md  alpss_auto_run.py  alpss_loop.py  alpss_main.py  alpss_run.py  carrier_filter.py  carrier_frequency.py  full_uncertainty_analysis.py  instantaneous_uncertainty_analysis.py  num_derivative.py  plotting.py  pyproject.toml  requirements.txt  run_tests.py  saving.py  setup.py  smoothing.py  spall_analysis.py  spall_doi_finder.py  stft.py  velocity_analysis.py  velocity_calculation.py
ALPSS/: alpss_auto_run.py  alpss_main.py  alpss_run.ipynb  alpss_run.py  alpss_stream_processor.py  full_uncertainty_analysis.py  instantaneous_uncertainty_analysis.py  num_derivative.py  old_alpss_main.py  plotting.py  saving.py  spall_doi_finder.py  utils.py  velocity_calculation.py
ALPSS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ALPSS/.ipynb_checkpoints/: alpss_run-checkpoint.ipynb
ALPSS/containerized_alpss/: docker-compose.yml
ALPSS/output_data/: example_file--inputs.csv  example_file--noisefrac.csv  example_file--results.csv  example_file--velocity--smooth.csv  example_file--velocity.csv  example_file--veluncert.csv
alpss/: alpss_main.py  cli.py  full_uncertainty_analysis.py  plotting.py  saving.py  spall_doi_finder.py  velocity_calculation.py
containerized_alpss/: Dockerfile  alpss_stream_processor.py  docker-compose.yml
output_data/: example_file--inputs.csv  example_file--noise--frac.csv  example_file--noisefrac.csv  example_file--results.csv  example_file--vel--uncert.csv  example_file--velocity--smooth.csv  example_file--velocity.csv  example_file--veluncert.csv
src/alpss/: __init__.py  alpss_main.py  alpss_run.py  alpss_study.py  alpss_watcher.py  carrier_filter.py  carrier_frequency.py  commands.py  plotting.py  saving.py  smoothing.py  spall_analysis.py  spall_doi_finder.py  (+1 more)
tests/: test_example_file.py  test_inputs.py
(+11 files in other folders)
