[project]
name = "ALPSS"
version = "1.2.0"
authors = [
  { name="Jacob M. Diamond", email="jdiamo15@jhu.edu" },
]
description = "Program for the automated analysis of photonic Doppler velocimetry spall signals with uncertainty."
readme = "README.md"
requires-python = ">=3.7, <= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"