[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ALPSS"
authors = [
    {name = "Jake Diamond", email = "jdiamo15@jhu.edu", github = "Jake-Diamond-9"},
    {name = "K. T. Ramesh", email = "ramesh@jhu.edu"},
]
maintainers = [
    {name = "Jake Diamond", email = "jdiamo15@jhu.edu", github = "Jake-Diamond-9"},
    {name = "Kacper Kowalik", email = "xarthisius.kk@gmail.com", github = "xarthisius"},
    {name = "Ali Rachidi", email = "arachid1@jhu.edu", github = "arachid1"},
    {name = "All the contributors"},
]
description = "Automated analysis of photonic Doppler velocimetry spall signals with uncertainty"
keywords = ["material science", "spall"]
readme = "README.md"
license = {text = "GPL-3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Materials Science",
    "Natural Language :: English",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "watchdog",
    "opencv-python",
]
